[gd_scene load_steps=11 format=3 uid="uid://market_screen"]

[ext_resource type="Script" path="res://src/ui/MarketScreen.gd" id="1_script"]
[ext_resource type="PackedScene" uid="uid://top_hud" path="res://src/ui/TopHUD.tscn" id="2_hud"]
[ext_resource type="PackedScene" uid="uid://bqe6er2xuyggx" path="res://src/ui/TaskListHUD.tscn" id="3_task"]
[ext_resource type="PackedScene" uid="uid://bottom_hud" path="res://src/ui/BottomHUD.tscn" id="4_nav"]

[sub_resource type="Gradient" id="Gradient_market"]
offsets = PackedFloat32Array(0, 0.6, 1)
colors = PackedColorArray(0.1, 0.12, 0.2, 1, 0.05, 0.06, 0.12, 1, 0.02, 0.03, 0.08, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_bg"]
gradient = SubResource("Gradient_market")
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="LabelSettings" id="LabelSettings_title"]
font_size = 38
font_color = Color(0.6, 0.9, 1, 1)
outline_size = 12
outline_color = Color(0, 0.1, 0.2, 1)
shadow_size = 10
shadow_color = Color(0, 0, 0, 0.8)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_main_frame"]
bg_color = Color(0.05, 0.07, 0.15, 0.6)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.4, 0.8, 1, 0.2)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_left = 30
corner_radius_bottom_right = 30
expand_margin_left = 15.0
expand_margin_top = 15.0
expand_margin_right = 15.0
expand_margin_bottom = 15.0
shadow_color = Color(0, 0, 0, 0.5)
shadow_size = 30

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_header"]
bg_color = Color(0.1, 0.3, 0.5, 0.4)
border_width_bottom = 2
border_color = Color(0.4, 0.8, 1, 0.5)
corner_radius_top_left = 20
corner_radius_top_right = 20

[node name="MarketScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_bg")

[node name="TopHUD" parent="." instance=ExtResource("2_hud")]
layout_mode = 1

[node name="TaskListHUD" parent="." instance=ExtResource("3_task")]
layout_mode = 1

[node name="BottomHUD" parent="." instance=ExtResource("4_nav")]
layout_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 100.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 10

[node name="MainFrame" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_main_frame")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/MainFrame"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Header" type="PanelContainer" parent="MarginContainer/MainFrame/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_header")

[node name="Title" type="Label" parent="MarginContainer/MainFrame/VBoxContainer/Header"]
layout_mode = 2
text = "VILLAGE MARKET"
label_settings = SubResource("LabelSettings_title")
horizontal_alignment = 1

[node name="CategoryBar" type="HBoxContainer" parent="MarginContainer/MainFrame/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="TabContainer" type="TabContainer" parent="MarginContainer/MainFrame/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 22
tab_alignment = 1

[node name="BROWSE" type="Control" parent="MarginContainer/MainFrame/VBoxContainer/TabContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/MainFrame/VBoxContainer/TabContainer/BROWSE"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 0

[node name="BuyList" type="VBoxContainer" parent="MarginContainer/MainFrame/VBoxContainer/TabContainer/BROWSE/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 12

[node name="SELL" type="Control" parent="MarginContainer/MainFrame/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/MainFrame/VBoxContainer/TabContainer/SELL"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 0

[node name="SellList" type="VBoxContainer" parent="MarginContainer/MainFrame/VBoxContainer/TabContainer/SELL/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 12

[node name="StatusLabel" type="Label" parent="MarginContainer/MainFrame/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
horizontal_alignment = 1

[node name="PricePopup" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="Panel" type="Panel" parent="PricePopup"]
custom_minimum_size = Vector2(400, 300)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="PricePopup/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20
theme_override_constants/separation = 20
alignment = 1

[node name="Label" type="Label" parent="PricePopup/Panel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Set Listing Price"
horizontal_alignment = 1

[node name="PriceInput" type="SpinBox" parent="PricePopup/Panel/VBox"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
min_value = 1.0
max_value = 999999.0
value = 50.0
alignment = 1
suffix = "Gold"

[node name="HBox" type="HBoxContainer" parent="PricePopup/Panel/VBox"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="ConfirmBtn" type="Button" parent="PricePopup/Panel/VBox/HBox"]
custom_minimum_size = Vector2(120, 50)
layout_mode = 2
text = "CONFIRM"

[node name="CancelBtn" type="Button" parent="PricePopup/Panel/VBox/HBox"]
custom_minimum_size = Vector2(120, 50)
layout_mode = 2
text = "CANCEL"
